database refactoring to remove dependence on Hibernate