@@ -1,7 +1,8 @@
 package edu.sdsc.inca.depot.persistent;
 
+
 import edu.sdsc.inca.dataModel.suite.SuiteDocument;
-import org.apache.xmlbeans.XmlException;
+
 
 /**
  * Test the functionality of the SeriesConfig and SeriesConfigDAO classes.
@@ -20,14 +21,14 @@ public class SeriesConfigTest extends PersistentTest {
   /**
    * Test SeriesConfigDAO's fromBean method.
    */
-  public void testFromBean() throws XmlException {
+  public void testFromBean() throws Exception {
 
     Suite s = Suite.generate("aSuite", 3);
     SeriesConfig sc = s.getSeriesConfig(0);
     Limits scLimits = new Limits(5, 3, 2);
     sc.setLimits(scLimits);
     Schedule scSchedule =
-      new Schedule("1", "2", "3", "4", "5", "cron", new Integer(1));
+      new Schedule("1", "2", "3", "4", "5", "cron", Integer.valueOf(1));
     sc.setSchedule(scSchedule);
     AcceptedOutput scAo = new AcceptedOutput("a", "b");
     sc.setAcceptedOutput(scAo);
